updated dockerfile to reduce jvm cost, updated k6